--- a/ProyectoArgProg/src/app/app.component.html
+++ b/ProyectoArgProg/src/app/app.component.html
@@ -1,261 +1,8 @@
 
     <!-- HEADER -->
+    <app-encabezado></app-encabezado>
+
+    <!-- Tarjeta #1 datos-->
+    <app-acerca-de></app-acerca-de>
   
-    <header class="p-3 bg-dark text-white align-items-center contenedorEncabezado">
-      <div class="container-fluid encabezado px-2">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-          <a href="/Modulo2/Index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <img class="bi me-2 rounded float-start" width="40" height="40" role="img" aria-label="Bootstrap"
-              src="./assets/pinguino.png" alt="Logo Página">
-          </a>
-  
-          <ul class="nav col-8 col-lg-5 me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 text-secondary">Inicio</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Acerca de...</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Experiencia</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Educación</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Contactos</a></li>
-          </ul>
-  
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-            <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-          </form>
-  
-          <div class="text-end">
-            <button type="button" class="btn btn-outline-light me-2">Login</button>
-            <button type="button" class="btn btn-warning">Sign-up</button>
-          </div>
-        </div>
-      </div>
-    </header>
-  
-  
-    <main>
-      <!-- Tarjeta #1 datos-->
-      <div class="card mat-card tarjeta border rounded">
-        <img id="paisaje" class="card-img-top" src="./assets/Lago.jpg" alt="Lago">
-        <img id="fotoPerfil" src="./assets/Perfil.jpg" alt="foto perfil">
-        <div class="card-body pt-5">
-          <div class="container-fluid containerCardPerfil">
-            <div class="row justify-content-between">
-              <div class="col-8">
-                <h4 class="card-title">Federico Roldán</h4>
-                <h4 class="card-subtitle mb-2 text-muted">Estudiante Lic. En Psicología</h4>
-                  <p class="card-text">Córdoba (Argentina).</p>
-                  <button type="button" class="btn btn-primary">Tengo interés en ..</button>
-                  <button type="button" class="btn btn-secondary">Añadir Sección</button>
-                  <button type="button" class="btn btn-secondary">Más</button>
-              </div>
-              <div class="col-2">
-                <img id="logoFacultad" src="./assets/logo-FACULTAD.jpg" alt="logo facultad">
-              </div>
-            </div>
-          </div>
-  
-  
-        </div>
-      </div>
-      <!-- Tarjeta #2 acerca de-->
-      <div class="card mat-card tarjeta border rounded">
-        <div class="card-body container-fluid ">
-          <div class="row justify-content-between">
-            <div class="col-3">
-              <h4 class="card-title">Acerca de..</h4>
-            </div>
-            <div class="col-1">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-  
-          </div>
-  
-          <p class="card-text">Egresado de secundaria con titulo de Bachiller en Humanidades
-            y actualmente cursando la Licenciatura en Psicología en la Universidad Nacional de Córdoba.
-            Me considero una persona responsable, proactiva, con ganas de aprender y con capacidad de trabajo en equipo.
-            Me gusta la música, el deporte y la lectura.
-          </p>
-        </div>
-      </div>
-      <!-- Tarjeta #3 Experiencia-->
-      <div class="card mat-card tarjeta border rounded">
-        <div class="card-body container-fluid">
-          <div class="row justify-content-between">
-            <div class="col-3">
-              <h4 class="card-title">Experiencia</h4>
-            </div>
-            <div class="col-1">
-              <img class="img-fluid iconos rounded float-end" src="./assets/mas.png" alt="agregar">
-            </div>
-          </div>
-          <!--Publi 1-->
-          <div class="row justify-content-start">
-            <div class="col-2">
-              <img class=" rounded mx-auto d-block img-fluid logo" src="./assets/logo-arcor-marca.jpg"
-                alt="logo arcor">
-            </div>
-            <div class="col-8">
-              <h4 class="card-title">Mesa de Servicio</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Grupo Arcor - Pasantías</h6>
-                <p class="card-text">Ago 2015 - Oct 2015</p>
-                <p class="card-text">Arroyito, Córdoba </p>
-            </div>
-            <div class="col-2">
-              <img class="iconos rounded float-end ms-2" src="./assets/boton-eliminar.png" alt="eliminar">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-          </div>
-          <!--Publi 2-->
-          <div class="row justify-content-start mt-3">
-            <div class="col-2">
-              <img class=" rounded mx-auto d-block img-fluid logo" src="./assets/quiosco.png"
-                alt="logo arcor">
-            </div>
-            <div class="col-8">
-              <h4 class="card-title">At. al Público</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Desp. San Jorge</h6>
-                <p class="card-text">Feb 2019 - Ene 2021</p>
-                <p class="card-text">Arroyito, Córdoba </p>
-            </div>
-            <div class="col-2">
-              <img class="iconos rounded float-end ms-2" src="./assets/boton-eliminar.png" alt="eliminar">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-          </div>
-          <!--publi 3 -->
-          <div class="row justify-content-start mt-3">
-            <div class="col-2">
-              <img class=" rounded mx-auto d-block img-fluid logo" src="./assets/logo-arcor-marca.jpg"
-                alt="logo arcor">
-            </div>
-            <div class="col-8">
-              <h4 class="card-title">Expedición</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Grupo Arcor</h6>
-                <p class="card-text">Nov 2021 - Mar 2022</p>
-                <p class="card-text">Arroyito, Córdoba </p>
-            </div>
-            <div class="col-2">
-              <img class="iconos rounded float-end ms-2" src="./assets/boton-eliminar.png" alt="eliminar">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-          </div>
-          <!--publi 4 -->
-          <div class="row justify-content-start mt-3">
-            <div class="col-2">
-              <img class=" rounded mx-auto d-block img-fluid logo" src="./assets/Logo_Inpunto.png"
-                alt="logo arcor">
-            </div>
-            <div class="col-8">
-              <h4 class="card-title">Operador - Logística</h4>
-              <h6 class="card-subtitle mb-2 text-muted">InPunto</h6>
-                <p class="card-text">Jun 2022 - Actualidad</p>
-                <p class="card-text">Córdoba, Córdoba </p>
-            </div>
-            <div class="col-2">
-              <img class="iconos rounded float-end ms-2" src="./assets/boton-eliminar.png" alt="eliminar">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-          </div>
-        </div>
-  
-  
-  
-      </div>
-      <!-- Tarjeta #4 Educación-->
-      <div class="card mat-card tarjeta border rounded">
-        <div class="card-body container-fluid">
-          <div class="row justify-content-between">
-            <div class="col-3">
-              <h4 class="card-title">Educación</h4>
-            </div>
-            <div class="col-1">
-              <img class="img-fluid iconos rounded float-end" src="./assets/mas.png" alt="agregar">
-            </div>
-          </div>
-          <!--Publi 1-->
-          <div class="row justify-content-start">
-            <div class="col-2">
-              <img class=" rounded mx-auto d-block img-fluid logo" src="./assets/EscMercedario.png"
-                alt="logo arcor">
-            </div>
-            <div class="col-8">
-              <h4 class="card-title">Inst. Nuestra Señora de la Merced</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Bachiller en Humanidades</h6>
-                <p class="card-text">2010 - 2015</p>
-                <p class="card-text">Arroyito, Córdoba </p>
-            </div>
-            <div class="col-2">
-              <img class="iconos rounded float-end ms-2" src="./assets/boton-eliminar.png" alt="eliminar">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-          </div>
-          <!--Publi 2-->
-          <div class="row justify-content-start mt-3">
-            <div class="col-2">
-              <img class=" rounded mx-auto d-block img-fluid logo" src="./assets/logoIua.jpg"
-                alt="logo arcor">
-            </div>
-            <div class="col-8">
-              <h4 class="card-title">Int. Univ. Aeronáutico</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Ing. en Informática</h6>
-                <p class="card-text">2017 - 2020 (incompleto)</p>
-                <p class="card-text">Córdoba, Córdoba </p>
-            </div>
-            <div class="col-2">
-              <img class="iconos rounded float-end ms-2" src="./assets/boton-eliminar.png" alt="eliminar">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-          </div>
-          <!--publi 3 -->
-          <div class="row justify-content-start mt-3">
-            <div class="col-2">
-              <img class=" rounded mx-auto d-block img-fluid logo" src="./assets/nuevo-escudo-unc-c.png"
-                alt="logo arcor">
-            </div>
-            <div class="col-8">
-              <h4 class="card-title">Universidad Nacional de Córdoba</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Lic. en Psicología</h6>
-                <p class="card-text">2022 - Cursando</p>
-                <p class="card-text">Córdoba, Córdoba </p>
-            </div>
-            <div class="col-2">
-              <img class="iconos rounded float-end ms-2" src="./assets/boton-eliminar.png" alt="eliminar">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-          </div>
-        </div>
-  
-  
-  
-      </div>
-  
-      <!-- Tarjeta #5 Cursos-->
-      <div class="card mat-card tarjeta border rounded">
-        <div class="card-body container-fluid">
-          <div class="row justify-content-between">
-            <div class="col-3">
-              <h4 class="card-title">Cursos</h4>
-            </div>
-            <div class="col-1">
-              <img class="img-fluid iconos rounded float-end" src="./assets/mas.png" alt="agregar">
-            </div>
-          </div>
-          <!--Publi 1-->
-          <div class="row justify-content-start">
-            <div class="col-2 .bg-dark">
-              <img class=" rounded mx-auto d-block img-fluid logo" src="./assets/logoAP.png"
-                alt="logo arcor">
-            </div>
-            <div class="col-8">
-              <h4 class="card-title">Argentina Programa</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Programador FullStack</h6>
-                <p class="card-text">2022 - Actualidad</p>
-                <p class="card-text">Argentina</p>
-            </div>
-            <div class="col-2">
-              <img class="iconos rounded float-end ms-2" src="./assets/boton-eliminar.png" alt="eliminar">
-              <img class="iconos rounded float-end" src="./assets/editar.png" alt="editar">
-            </div>
-          </div>
-        </div> 
-      </div>
-  
-    </main>
+    <app-main></app-main>
